# carmen

./: Cargo.toml  README.md
src/: lib.rs  parallel.rs  sequential.rs  tree.rs
